<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>psdk_interfaces</name>
  <version>1.0.0</version>
  <description>Provides custom message, srv and action types for psdk ros2 wrapper</description>
  <maintainer email="bianca@unmanned.life">Bianca Bendris</maintainer>
  <maintainer email="victor@unmanned.life">Victor Massague Respall</maintainer>
  <license>MPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
