<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>psdk_wrapper</name>
  <version>1.2.1</version>
  <description>ROS2 wrapper for the DJI PSDK</description>
  <maintainer email="bianca@unmanned.life">Bianca Bendris</maintainer>
  <maintainer email="victor@unmanned.life">Victor Massague Respall</maintainer>
  <license>MPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ffmpeg-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libopus-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>psdk_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>nlohmann-json-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
