<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>umd_psdk_wrapper</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for the DJI PSDK</description>
  <maintainer email="bianca@unmanned.life">Bianca Bendris</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_util</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
